# portfolio

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  bun.lockb  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  portfolio-13de1a02ccb69e5a.js  portfolio-13de1a02ccb69e5a_bg.wasm  portfolio-1673dc653ee17168.js  portfolio-1673dc653ee17168_bg.wasm  portfolio-1d2020cfa6b4e3bd.js  portfolio-1d2020cfa6b4e3bd_bg.wasm  portfolio-28aac999afacadc6.js  portfolio-28aac999afacadc6_bg.wasm  portfolio-2b3b2788e925cf4b.js  portfolio-2b3b2788e925cf4b_bg.wasm  portfolio-2dd8c3c1c7b8faa4.js  portfolio-2dd8c3c1c7b8faa4_bg.wasm  portfolio-300e540fabe843ff.js  portfolio-300e540fabe843ff_bg.wasm  portfolio-319f988b52093cdc.js  portfolio-319f988b52093cdc_bg.wasm  portfolio-365e54431f5367ed.js  portfolio-365e54431f5367ed_bg.wasm  portfolio-3ad05721ad1ee426.js  portfolio-3ad05721ad1ee426_bg.wasm  portfolio-4558379e3f09edf5.js  portfolio-4558379e3f09edf5_bg.wasm  portfolio-6b6c45f5887d460e.js  portfolio-6b6c45f5887d460e_bg.wasm  portfolio-72373d5c05bcb279.js  (+66 more)
.github/workflows/: rust-clippy.yml  yew.yml
.trunk/: trunk.yaml
backend/: .gitignore  README.md
backend/include/: api.h  cli.h  compress.h  config.h  (+5 more)
frontend/: README.md  biome.json  justfile  package.json  pnpm-lock.yaml  postcss.config.js  shell.nix  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
scripts/: bootstrap.sh  frontend-bootstrap.sh
src/: main.rs  utils.rs
static/: 404.html
styles/: style.css  tailwind.css
(+64 files in other folders)
