[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = { version = "0.17.0" }
stylist = { version = "0.12.1", features = ["yew", "macros", "yew_integration", "yew_use_media_query", "yew_use_style"] }
