[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
stylist = { version = "0.13.0", features = [
  "yew",
  "macros",
  "yew_integration",
  "yew_use_media_query",
  "yew_use_style",
] }
catppuccin = "1.3.0"
chrono = "0.4.31"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
gloo-timers = "0.3.0"
